--- a/debian_orig/control
+++ b/debian_orig/control
@@ -25,7 +25,7 @@ Depends: adduser (>= 3.10),
          libgcc1 (>= 1:3.0), 
          libssl-dev (>=1.0.0), 
          libexpat1-dev (>=2.0)
-Description: The VSCP daemon
+Description: VSCP daemon
  A daemon that act as a hub and logic controller for a VSCP based system. It is
  possible to add drivers to physical devices, interface external nodes over
  tcp/ip, websockets and to perform other higher end functionality.
