--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -150,8 +150,8 @@
         config - Level I/CANAL driver configuration string.
         flags  - Level I/CANAL driver configuration flags.
         translation - Bit field for incomming event translation
-                      Bit 1: Level 1 measurement events -> Level II measurement float events
-                      Bit 2: Level 1 measurement events -> Level II measurement string events
+                      bit 1: Level 1 measurement events -> Level II measurement float events
+                      bit 2: Level 1 measurement events -> Level II measurement string events
                       bit 3: All Level I events -> Level I over Level II events.
     -->
     <level1driver enable="true" >
