--- a/Makefile.in
+++ b/Makefile.in
@@ -50,10 +50,59 @@ install: install-manpages
 	@echo " - Documentation is at https://docs.vscp.org/vscpd/14.0 "
 	@echo "   and more general documentation can be found here https://docs.vscp.org"
 
+install-folders:
+	@echo "- Creating folders."
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/drivers
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/drivers/level1
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/drivers/level2
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/log/vscp/logs
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/web
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/web/html
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/web/html/images
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/web/html/css
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/web/html/js
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/etc/vscp/
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/etc/vscp/certs
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/etc/vscp/ca_certificates
+
 uninstall: 
     # Install sub components
 	@for d in $(PROJ_SUBDIRS); do (echo "====================================================" &&\
 	echo "uninstall in dir " $$d && echo "====================================================" && cd $$d && $(MAKE) uninstall); done
+
+install-config:
+	@echo "- Installing main configuration file."
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/etc/
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/etc/vscp
+	@if [ ! -e $(DESTDIR)/etc/vscp/vscpd.conf ]; then\
+		$(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf;\
+	else\
+		mv $(DESTDIR)/etc/vscp/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
+		$(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf;\
+	fi
+
+install-sample-certs:
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/etc/vscp/certs
+	@echo "- Installing web server sample certificate."
+	@if [ ! -e $(DESTDIR)/etc/vscp/certs/server.pem ]; then\
+		$(INSTALL_PROGRAM) -b -m744 install_files/certs/server.pem $(DESTDIR)/etc/vscp/certs/;\
+	fi
+
+	@echo "- Installing web client sample certificat."
+	@if [ ! -e $(DESTDIR)/etc/vscp/certs/client.pem ]; then\
+		$(INSTALL_PROGRAM) -b -m744 install_files/certs/client.pem $(DESTDIR)/etc/vscp/certs/;\
+	fi
+
+	@echo "- Installing tcp/ip server sample certificate."
+	@if [ ! -e $(DESTDIR)/etc/vscp/certs/tcpip_server.pem ]; then\
+		$(INSTALL_PROGRAM) -b -m744 install_files/certs/tcpip_server.pem $(DESTDIR)/etc/vscp/certs/;\
+	fi
+
+	@echo "- Installing tcp/ip client sample certificat."
+	@if [ ! -e $(DESTDIR)/etc/vscp/certs/tcpip_client.pem ]; then\
+		$(INSTALL_PROGRAM) -b -m744 install_files/certs/tcpip_client.pem $(DESTDIR)/etc/vscp/certs/;\
+	fi 
 
 install-manpages:
 	@echo "- Installing man-pages."
@@ -66,6 +115,10 @@ install-manpages:
 	$(INSTALL_PROGRAM) -b -m644 man/vscp-mkpasswd.1 $(DESTDIR)/usr/share/man/man1/
 	$(INSTALL_PROGRAM) -b -m644 man/vscpdrivers.7 $(DESTDIR)/usr/share/man/man7/
 	mandb
+
+install-web-samples:
+	@echo "- Installing web-sample pages."
+	sh do_web_download /var/lib/vscp/
 
 fetch_event_database:
 	echo "Fetching VSCP event database"
