Fixed  websocket initialization

--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -656,24 +656,7 @@
       lua_background_script_params - Can add dynamic parameters to background script. Parameters mapped to 
                                      global 'mg' table 'params' field.
                                      default: param1=1,param2=2
-      websocket_root               - In case vscpd is built with Lua and websocket support, 
-                                     Lua scripts may be used for websockets as well. Since websockets 
-                                     use a different URL scheme (ws, wss) than other http pages 
-                                     (http, https), the Lua scripts used for websockets may also be 
-                                     served from a different directory. By default, the document_root 
-                                     is used as websocket_root as well.
-                                     Default: not set = same as document_root
-      websocket_timeout_ms         - Timeout for network read and network write operations for websockets, 
-                                     WS(S), in milliseconds. If this value is not set, the value of 
-                                     request_timeout_ms is used for HTTP(S) as well as for WS(S). 
-                                     In case websocket_timeout_ms is set, HTTP(S) and WS(S) can use 
-                                     different timeouts.
-                                     default: not set = same as network read/write
-      enable_websocket_ping_pong   - [yes/no] - If this configuration value is set to yes, the server 
-                                     will send a websocket PING message to a websocket client, once the 
-                                     timeout set by websocket_timeout_ms expires. Clients (Web browsers) 
-                                     supporting this feature will reply with a PONG message.
-
+      
                                      If this configuration value is set to no, the websocket server will 
                                      close the connection, once the timeout expires.                          
                                      Default: yes
@@ -741,10 +724,41 @@
      />
 
     <!--
-      Enable disable the websocket interface.
-      Id auth is set to false not authentication will be done
+      Enable disable the REST interface.
     -->
-    <websockets enable="true" />
+    <restapi enable="true" /> 
+
+    <!--
+      Enable disable the websocket interface.
+
+      websocket_root               - In case vscpd is built with Lua and websocket support, 
+                                     Lua scripts may be used for websockets as well. Since websockets 
+                                     use a different URL scheme (ws, wss) than other http pages 
+                                     (http, https), the Lua scripts used for websockets may also be 
+                                     served from a different directory. By default, the document_root 
+                                     is used as websocket_root as well.
+                                     Default: not set = same as document_root
+      websocket_timeout_ms         - Timeout for network read and network write operations for websockets, 
+                                     WS(S), in milliseconds. If this value is not set, the value of 
+                                     request_timeout_ms is used for HTTP(S) as well as for WS(S). 
+                                     In case websocket_timeout_ms is set, HTTP(S) and WS(S) can use 
+                                     different timeouts.
+                                     Default: "30000"
+      enable_websocket_ping_pong   - [true/false] - If this configuration value is set to yes, the server 
+                                     will send a websocket PING message to a websocket client, once the 
+                                     timeout set by websocket_timeout_ms expires. Clients (Web browsers) 
+                                     supporting this feature will reply with a PONG message.
+                                     Default: "false"
+      lua_websocket_pattern        - A pattern for websocket script files that are interpreted as Lua 
+                                     scripts by the server.
+                                     Default: "**.lua$"
+    -->
+    <websockets enable="true" 
+                websocket_root=""
+                websocket_timeout_ms=""
+                enable_websocket_ping_pong=""
+                lua_websocket_pattern="**.lua$"
+    />
 
     <!--
       Holds information about one (at least) or more users
