--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -673,6 +673,8 @@
         index_files="index.xhtml,index.html,index.htm,index.lp,index.lsp,index.lua,index.cgi,index.shtml,index.php"
         authentication_domain="mydomain.com"
         enable_auth_domain_check="false"
+        access_log_file="/var/log/vscp/vscpd-access.log"
+        error_log_file="/var/log/vscp/vscpd-error.log"
         ssl_certificate=""
         ssl_certificate_chain=""
         ssl_verify_peer="false"
@@ -800,7 +802,7 @@
                 config="/tmp/canallog.txt"
                 flags="1"
                 translation="0x02"
-                path="/usr/lib/x86_64-linux-gnu/vscpl1drv-logger.so"
+                path="/var/lib/vscp/drivers/level1/vscpl1drv-logger.so"
                 guid="FF:FF:FF:FF:FF:FF:FF:F5:01:00:00:00:00:00:00:01"
         />
 
@@ -810,7 +812,7 @@
                 config="/dev/ttyUSB0"
                 flags="0"
                 translation="0x02"
-                path="/usr/lib/x86_64-linux-gnu/vscpl1drv-can4vscp.so"
+                path="/var/lib/vscp/drivers/level1/vscpl1drv-can4vscp.so"
                 guid="FF:FF:FF:FF:FF:FF:FF:F5:01:00:00:00:00:00:00:02"
         />
 
@@ -823,7 +825,7 @@
                 config="vcan0"
                 flags="0"
                 translation="0x02"
-                path="/usr/lib/x86_64-linux-gnu/vscpl1drv-socketcan.so"
+                path="/var/lib/vscp/drivers/level1/vscpl1drv-socketcan.so"
                 guid="FF:FF:FF:FF:FF:FF:FF:F5:01:00:00:00:00:00:00:03"
         />
 
@@ -833,7 +835,7 @@
                 config="/dev/ttyS0;19200;0;0;125"
                 flags="0"
                 translation="0x02"
-                path="/usr/lib/x86_64-linux-gnu/vscpl1drv-can232.so"
+                path="/var/lib/vscp/drivers/level1/vscpl1drv-can232.so"
                 guid="FF:FF:FF:FF:FF:FF:FF:F5:01:00:00:00:00:00:00:04"
         />
 
@@ -843,7 +845,7 @@
                 config="9598;3639"
                 flags="0"
                 translation="0x02"
-                path="/usr/lib/x86_64-linux-gnu/vscpl1drv-xap.so"
+                path="/var/lib/vscp/drivers/level1/vscpl1drv-xap.so"
                 guid="FF:FF:FF:FF:FF:FF:FF:F5:01:00:00:00:00:00:00:05"
         />
 
@@ -864,7 +866,7 @@
         <!-- Level II Logger -->
         <driver enable="false"
                 name="Logger"
-                path-driver="/usr/lib/x86_64-linux-gnu/vscpl2drv-logger.so"
+                path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-logger.so"
                 path-config="/var/lib/vscp/vscpd/logger2.conf"
                 guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:01"
         />
@@ -872,7 +874,7 @@
         <!-- Level II lmsensors -->
         <driver enable="false" 
                 name="lmsensors"
-                path-driver="/usr/lib/x86_64-linux-gnu/vscpl2drv-lmsensors.so"
+                path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-lmsensors.so"
                 path-config="/var/lib/vscp/vscpd/lmsensors.conf"
                 guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:02"
         />
@@ -880,7 +882,7 @@
         <!-- Level II socketcan  -->
         <driver enable="false" 
                 name="socketcan"
-                path-driver="/usr/lib/x86_64-linux-gnu/vscpl2drv-socketcan.so"
+                path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-socketcan.so"
                 path-config="/var/lib/vscp/vscpd/socketcan.conf"
                 guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:03"
         />
@@ -888,7 +890,7 @@
         <!-- Level II mqtt -->
         <driver enable="false" 
                 name="mqtt"
-                path-driver="/usr/lib/x86_64-linux-gnu/vscpl2drv-mqtt.so"
+                path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-mqtt.so"
                 path-config="/var/lib/vscp/vscpd/mqtt.conf"
                 guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:04"
         />
@@ -896,7 +898,7 @@
         <!-- Level II tcp/ip link -->
         <driver enable="false" 
                 name="tcpiplink"
-                path-driver="/usr/lib/x86_64-linux-gnu/vscpl2drv-tcpiplink.so"
+                path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-tcpiplink.so"
                 path-config="/var/lib/vscp/vscpd/tcpiplink.conf"
                 guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:05"
         />
@@ -904,7 +906,7 @@
         <!-- Level II raw ethernet -->
         <driver enable="false"
                 name="rawethernet"
-                path-driver="/usr/lib/x86_64-linux-gnu/vscpl2drv-raweth.so"
+                path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-raweth.so"
                 path-config="/var/lib/vscp/vscpd/raweth.conf"
                 guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:06"                
         />
@@ -912,7 +914,7 @@
        <!-- Level II simulation -->
         <driver enable="true"
                 name="sim"
-                path-driver="/usr/lib/x86_64-linux-gnu/vscpl2drv-sim.so"
+                path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-sim.so"
                 path-config="/var/lib/vscp/vscpd/sim.conf"
                 guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:07"
         />
@@ -920,7 +922,7 @@
         <!-- Level II 1-wire driver -->
         <driver enable="false"
                 name="1-wire"
-                path-driver="/usr/lib/x86_64-linux-gnu/vscpl2drv-wire1.so"
+                path-driver="/var/lib/vscp/drivers/level2/vscpl2drv-wire1.so"
                 path-config="/var/lib/vscp/vscpd/wire1.conf"
                 guid="FF:FF:FF:FF:FF:FF:FF:F5:02:00:00:00:00:00:00:08"
         />
