ws2 code debugged

--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -41,6 +41,22 @@
     />
 
     <!--
+	Enable debug definitions here. Se debug section of manual for information. 
+        Debugging flags can also be set on the command line but this setting override
+	any setting that is done there. This is why this section is commented out.
+     
+    <debug byte1="0"
+	   byte1="0"
+           byte1="0"
+           byte1="0"
+           byte1="0"
+           byte1="0"
+           byte1="0"
+           byte1="0"
+    />
+    -->
+
+    <!--
           This is the admin credentials.
           admin     - Name for admin account.
                       Default: "admin"
