Added swithc for internal admin pages

--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -32,12 +32,15 @@
                    Default: "FF:FF:FF:FF:FF:FF:FF:F5:00:00:00:00:00:00:00:01"
 
       servername - is a user name for the daemon whcih it use to greet users with.
-                   Default: "The VSCP daemon"                  
+                   Default: "The VSCP daemon" 
+      webadminif - Set to "true" to enable web admin interface (http(s)://server/vscp)                              
+                   Default: "true"
     -->
     <general clientbuffersize="1024"
              runasuser="vscp"
              guid="FF:FF:FF:FF:FF:FF:FF:F5:00:00:00:00:00:00:00:01"
-             servername="The VSCP daemon" 
+             servername="The VSCP daemon"  
+             webadminif="true"
     />
 
     <!--
