--- a/debian_orig/control
+++ b/debian_orig/control
@@ -6,7 +6,8 @@ Build-Depends: debhelper (>= %COMPAT),
                libssl-dev (>=1.0.0),
                libsystemd-dev, 
                libexpat1-dev (>=2.0),
-               uuid-dev
+               uuid-dev.
+               libwrap0-dev
 Standards-Version: 4.3.0
 Homepage: https://www.vscp.org
 Vcs-Browser: https://github.com/grodansparadis/vscp
@@ -24,7 +25,8 @@ Depends: adduser (>= 3.10),
          libstdc++6 (>= 5.2), 
          libgcc1 (>= 1:3.0), 
          libssl-dev (>=1.0.0), 
-         libexpat1-dev (>=2.0)
+         libexpat1-dev (>=2.0),
+         libwrap0-dev
 Description: VSCP daemon
  A daemon that act as a hub and logic controller for a VSCP based system. It is
  possible to add drivers to physical devices, interface external nodes over
