--- a/debian_orig/control
+++ b/debian_orig/control
@@ -27,7 +27,7 @@ Depends: adduser (>= 3.10),
          libgcc1 (>= 1:3.0), 
          libssl-dev (>=1.0.0), 
          libexpat1-dev (>=2.0),
-         libwrap0-dev,
+         libwrap0-dev (>=7.6),
          libz-dev
 Description: VSCP daemon
  A daemon that act as a hub and logic controller for a VSCP based system. It is
