ignoring googletest folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Dustribution collection
+# 
 dist/
 
 # Compiled Object files
@@ -322,4 +323,4 @@ src/vscp/drivers/level2/rpilcd/linux/test-if2
 src/vscp/relayd/a.out
 src/vscp/relayd/relayd
 tests/helperlib/unittest
-
+googletest
