--- a/Makefile.in
+++ b/Makefile.in
@@ -156,6 +156,7 @@ clean:
 	rm -f config.startup
 	rm -f config.status
 	rm -f tests/vscphelper/*.o
+	rm -f tests/vscphelper/unittest
 
 distclean: clean
 	@sh clean_for_dist
@@ -166,9 +167,9 @@ deb:
 	echo "Building deb in dir " $$d && echo "====================================================" && cd $$d && $(MAKE) deb ); done
 
 check:
-	cd googletest ; cmake CMakeLists.txt ; make
-	@for d in $(PROJ_TEST_SUBDIRS); do (echo "====================================================" &&\
-	echo "Building and running unit test in testdir " $$d && echo "====================================================" && cd $$d && $(MAKE) && ./unittest); done
+#	cd googletest ; cmake CMakeLists.txt ; $(MAKE) ; cd ..
+#	@for d in $(PROJ_TEST_SUBDIRS); do (echo "====================================================" &&\
+#	echo "Building and running unit test in testdir " $$d && echo "====================================================" && cd $$d && $(MAKE) && ./unittest); done
 
 distcheck:
 
