--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -18,9 +18,9 @@ jobs:
     - name: configure
       run: ./configure
     - name: googletest_build
-      run: cd googletest && cmake CMakeLists.txt 
+      run: cd googletest && mkdir build && cd build && cmake ..
     - name: make
-      run: make
+      run: ggogletest/make && make
     - name: make check
       run: make check
     - name: make distcheck
