--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -18,11 +18,11 @@ jobs:
     - name: configure
       run: ./configure
     - name: googletest_build
-      run: cd googletest && mkdir build && cd build && cmake ..
+      run: cd googletest && mkdir build && cd build && cmake .. 
     - name: make
       run: make 
     - name: googeltest  
-      run: cd googletest && make
+      run: make -f googletest/Makefile
     - name: make check
       run: make check
     - name: make distcheck
