--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -22,7 +22,7 @@ jobs:
     - name: make
       run: make 
     - name: googeltest  
-      run: make -f googletest/build/Makefile all
+      run: make -f googletest/build/Makefile
     - name: make check
       run: make check
     - name: make distcheck
