--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -18,11 +18,9 @@ jobs:
     - name: configure
       run: ./configure
     - name: googletest_build
-      run: cd googletest && mkdir build && cd build && cmake .. 
+      run: cd googletest && mkdir build && cd build && cmake .. && make
     - name: make
       run: make 
-    - name: googeltest  
-      run: make -f googletest/build/Makefile
     - name: make check
       run: make check
     - name: make distcheck
