--- a/tests/helperlib/Makefile
+++ b/tests/helperlib/Makefile
@@ -47,7 +47,8 @@ CPPFLAGS =  -DWITH_SYSTEMD -DWITH_WRAP ${WARNINGS} -fno-var-tracking-assignments
 	-I../../src/common \
 	-I../../src/vscp/common \
 	-I../../src/common/third_party/nlohmann \
-	-I../../googletest/googletest/include
+	-I../../googletest/googletest/include \
+	-L../../googletest/build/lib
 
 LDFLAGS = 
 EXTRALIBS =  -lexpat -lssl -lsystemd -lwrap -lz -lrt -lm -lcrypto -lpthread -ldl  -L../../googletest/lib -lgtest -lgtest_main
